# chesstest

./: CMakeLists.txt  cmake_install.cmake
headers/: bishop.h  board.h  cell.h  data.h  helper.h  king.h  knight.h  pawn.h  pieces.h  plate.h  queen.h  rook.h  setting.h  user.h  wb.h
src/: bishop.cpp  board.cpp  helper.cpp  king.cpp  knight.cpp  main.cpp  pawn.cpp  pieces.cpp  plate.cpp  queen.cpp  rook.cpp  setting.cpp  user.cpp  wb.cpp
